# Tutolage

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  backend_test.py  docker-compose.yml  health_check_test.py  jeeves_voice_test.py  jeeves_voice_test_v2.py  model.patch  quantum_v3_test.py  test_result.md  test_results_detailed.json  test_results_sota_2026.json
.emergent/: emergent.yml  summary.txt
.github/workflows/: ci.yml
backend/: .env  .env.example  Dockerfile  cs_bible.py  cs_classes.py  cs_classes_advanced.py  pyproject.toml  requirements.txt  server.py
backend/config/: settings.py
backend/routes/: ai.py  ai_debugger.py  ai_log_vault.py  ai_pipeline.py  ai_toolkit_enhanced.py  animation_pipeline.py  asset_pipeline.py  bible.py  code_intelligence.py  code_to_app_pipeline.py  collaboration.py  compiler.py  cs_engine.py  curriculum.py  export_github.py  game_genres.py  game_logic_pipeline.py  health.py  hub.py  hybrid_pipeline.py  image_generation.py  immersive_tutor.py  interactive_education.py  jeeves_core.py  jeeves_eq.py  jeeves_hyperion.py  jeeves_synergy.py  jeeves_tutor.py  jeeves_voice.py  learning_engine.py  logic_engine.py  logscraper.py  masterclass.py  math_engine.py  multi_agent.py  music_pipeline.py  narrative_engine.py  npc_pipeline.py  physics_engine.py  quiz_bank.py  (+6 more)
backend/services/: database.py  rag_service.py
backend/tests/: __init__.py  conftest.py  test_animation_pipeline.py  test_game_logic_pipeline.py  test_health.py  test_jeeves_core.py  test_npc_pipeline.py
frontend/: .env  .env.example  Dockerfile  eslint.config.js  package-lock.json  package.json
frontend/app/: index.tsx  index.tsx.backup
frontend/components/: AchievementNotification.tsx  CommandPalette.tsx  ErrorBoundary.tsx  LanguageSwitcher.tsx
frontend/components/Editor/: CodeEditor.tsx
frontend/components/Header/: AppHeader.tsx
frontend/components/MobileUI/: MinimalToolbar.tsx  QuickActionBar.tsx  SafeButton.tsx  StatusIndicator.tsx
frontend/components/Toolbar/: MainToolbar.tsx
frontend/components/UI/: ErrorBanner.tsx  LoadingScreen.tsx  Toast.tsx
frontend/constants/: config.ts  themes.ts
frontend/features/AI/: AISuggestionsModal.tsx  index.ts
frontend/features/AIInteractionsLog/: AIInteractionsLogModal.tsx
frontend/features/AIPipeline/: AIPipelineModal.tsx  index.ts
frontend/features/Advanced/: AdvancedFeaturesModal.tsx  index.ts
frontend/features/AssetPipeline/: AssetPipelineModal.tsx
frontend/features/Bible/: BibleModal.tsx  bibleContent.ts
frontend/features/CSAcademy/: CSAcademyModal.tsx
frontend/features/CodeIntelligence/: CodeIntelligenceModal.tsx
frontend/features/CodeToApp/: CodeToAppModal.tsx  index.ts
frontend/features/Collaboration/: CollaborationManager.ts  CollaborationModal.tsx
frontend/features/Compiler/: CompilerModal.tsx  CompilerTypes.ts
frontend/features/Curriculum/: CurriculumBrowser.tsx  index.ts
frontend/features/Dashboard/: DashboardModal.tsx
frontend/features/Debugger/: DebuggerModal.tsx
frontend/features/Education/: EducationModal.tsx
frontend/features/GameGenres/: GameGenresModal.tsx
frontend/features/Hub/: HubModal.tsx  index.ts
frontend/features/HybridPipeline/: HybridPipelineModal.tsx
frontend/features/Imagine/: ImagineModal.tsx  index.ts
frontend/features/ImmersiveLearning/: ImmersiveLearningModal.tsx
frontend/features/ImmersiveTutor/: ImmersiveTutorModal.tsx
frontend/features/Jeeves/: JeevesModal.tsx
frontend/features/JeevesEQ/: JeevesEQModal.tsx
frontend/features/Learning/: LearningDashboard.tsx
frontend/features/LearningHub/: LearningHubModal.tsx
frontend/features/LiveCollab/: LiveCollabModal.tsx
frontend/features/LogicEngine/: LogicEngineModal.tsx
frontend/features/Masterclass/: MasterclassModal.tsx
frontend/features/MathAcademy/: MathAcademyModal.tsx
frontend/features/MultiAgent/: MultiAgentModal.tsx
frontend/features/Music/: MusicPipelineModal.tsx
frontend/features/Narrative/: NarrativeModal.tsx
frontend/features/PhysicsAcademy/: PhysicsAcademyModal.tsx
frontend/features/Pipeline/: PipelineVisualizer.tsx
frontend/features/ReadingCorner/: ReadingCornerModal.tsx
frontend/features/SOTA/: SOTAModal.tsx
frontend/features/SOTAExtended/: SOTAExtendedModal.tsx
frontend/features/Vault/: VaultModal.tsx  index.ts
frontend/features/VersionControl/: Starlog.ts
frontend/features/Voice/: useVoiceCommands.ts
frontend/features/WasmCompiler/: WasmCompiler.ts
frontend/features/WorldEngine/: WorldEngineModal.tsx
frontend/hooks/: useAPI.ts  useMobileOptimization.ts  usePowerAwareness.ts  useResponsiveLayout.ts  useSessionTracker.ts  useStability.ts  useStorage.ts  useTheme.ts
frontend/i18n/: I18nContext.tsx  index.ts  translations.ts
frontend/services/: api.ts  synergy.ts
frontend/store/: appStore.ts  modalStore.ts
frontend/types/: index.ts
frontend/utils/: api.ts
