# ============================================================================
# CodeDock Backend - Modern Python Project Configuration
# ============================================================================
# Uses: uv (package manager), ruff (linter/formatter), pytest (testing)
# ============================================================================

[project]
name = "codedock-backend"
version = "15.0.0"
description = "CodeDock - Ultimate AI-Powered Coding Education & Game Development Platform"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "CodeDock Team", email = "team@codedock.dev" }
]
keywords = [
    "education",
    "coding",
    "ai",
    "game-development",
    "fastapi",
    "llm",
    "tutor"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "python-multipart>=0.0.6",
    
    # Database
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    
    # Data Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # AI/LLM
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
    
    # Vector Database / RAG
    "chromadb>=0.4.22",
    
    # HTTP Client
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Code Execution (sandboxed)
    "RestrictedPython>=7.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.26.0",
    
    # Linting & Formatting
    "ruff>=0.2.0",
    
    # Type Checking
    "mypy>=1.8.0",
    "types-python-jose>=3.3.0",
    
    # Pre-commit
    "pre-commit>=3.6.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/codedock/codedock"
Documentation = "https://docs.codedock.dev"
Repository = "https://github.com/codedock/codedock"
Issues = "https://github.com/codedock/codedock/issues"

[project.scripts]
codedock = "server:main"

# ============================================================================
# Build System (using uv)
# ============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

# ============================================================================
# UV Configuration (Blazing-fast package manager)
# ============================================================================

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
    "mypy>=1.8.0",
]

# ============================================================================
# Ruff Configuration (Linting + Formatting)
# ============================================================================

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "ERA001", # commented-out code (too aggressive)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["routes", "services", "models", "config"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=70",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*.pyc",
    ".venv/*",
    "venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ============================================================================
# MyPy Configuration (Type Checking)
# ============================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
